Set initial focus to feedback textarea

--- a/src/feedback.html
+++ b/src/feedback.html
@@ -627,6 +627,7 @@ $(function() {
     e.preventDefault();
     $('#questionnaireContent').hide();
     $('#textFeedbackContent').show();
+    $('#text_feedback_textarea').focus();
   });
 
   // Freeform (text) feedback submit
