Send-diagnostic-info checkbox now properly hidden on Android. Also moved checkbox above Submit button.

--- a/src/feedback.html
+++ b/src/feedback.html
@@ -389,24 +389,25 @@ $(function() {
         <li class="sad" id="compatibility_sad"></li>
       </ul><br />
 
+      <table class="not-android">
+        <tr>
+          <td>
+            <input type="checkbox" checked id="questionnaire_send_diagnostic">
+          </td>
+          <td>
+            <label for="questionnaire_send_diagnostic">
+              <span id="questionnaire_diagnostic_check"></span>
+            </label>
+          </td>
+        </tr>
+      </table>
+      <br>
+
       <center>
         <input type="submit" value="" id="submit_button" />
       </center>
       <input type="hidden" value="" id="formdata" name="formdata">
     </form>
-
-    <table>
-      <tr>
-        <td>
-          <input type="checkbox" checked id="questionnaire_send_diagnostic">
-        </td>
-        <td>
-          <label for="questionnaire_send_diagnostic">
-            <span id="questionnaire_diagnostic_check"></span>
-          </label>
-        </td>
-      </tr>
-    </table>
 
   </div>
 
