Centered freeform feedback submit button

--- a/src/feedback.html
+++ b/src/feedback.html
@@ -442,7 +442,9 @@ $(function() {
         </table>
         <br>
 
-        <input type="submit" value="" id="text_feedback_submit" />
+        <center>
+          <input type="submit" value="" id="text_feedback_submit" />
+        </center>
       </div>
 
       <p>
