--- a/src/feedback.html
+++ b/src/feedback.html
@@ -389,19 +389,21 @@ $(function() {
         <li class="sad" id="compatibility_sad"></li>
       </ul><br />
 
-      <table class="not-android">
-        <tr>
-          <td>
-            <input type="checkbox" checked id="questionnaire_send_diagnostic">
-          </td>
-          <td>
-            <label for="questionnaire_send_diagnostic">
-              <span id="questionnaire_diagnostic_check"></span>
-            </label>
-          </td>
-        </tr>
-      </table>
-      <br>
+      <div class="not-android">
+        <table>
+          <tr>
+            <td>
+              <input type="checkbox" checked id="questionnaire_send_diagnostic">
+            </td>
+            <td>
+              <label for="questionnaire_send_diagnostic">
+                <span id="questionnaire_diagnostic_check"></span>
+              </label>
+            </td>
+          </tr>
+        </table>
+        <br>
+      </div>
 
       <center>
         <input type="submit" value="" id="submit_button" />
