Android in progress. Encountering problems. NOTE: DEBUG CODE PRESENT

--- a/src/feedback.html
+++ b/src/feedback.html
@@ -76,13 +76,27 @@ input[type="submit"] {
 }
 
 textarea {
-  width: 100%;
+  width: 90%;
+  margin: auto;
   height: 10em;
   display: block;
+  font-size: 1.1em;
+  padding: 0.5em;
+  border-width: 2px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 
 input[type="text"] {
-  width: 100%;
+  width: 90%;
+  margin: auto;
+  display: block;
+  font-size: 1.1em;
+  padding: 0.5em;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 
 </style>
