--- a/src/feedback.html
+++ b/src/feedback.html
@@ -176,7 +176,7 @@ html {
 
       <div id="text_feedback_form">
         <p>
-          <span id="text_feedback_top_para"></span>
+          <span id="text_feedback_prompt"></span>
         </p>
         <textarea id="text_feedback_textarea"></textarea>
 
@@ -282,13 +282,13 @@ var langJSON = {
   }, 
   "en": {
     "text_feedback_email_prompt": "If you would like us to respond to you, please enter your email address:\n", 
+    "submit_button": "Submit", 
     "smiley_title": "Overall satisfaction", 
     "title": "Psiphon Feedback", 
     "text_feedback_bottom_para": "If the above form is not working, or you would like to send screenshots, please email us at <a id=\"emailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a>\n", 
     "smiley_happy": "Psiphon connects and performs the way I want it to.", 
-    "text_feedback_top_para": "Please enter your comments here:\n", 
     "top_para_3": "You can also find solutions to many common problems in our\n<a class=\"faqURL\" href=\"#\">Frequently Asked Questions</a>.\n", 
-    "submit_button": "Submit", 
+    "text_feedback_prompt": "Please enter your comments here:\n", 
     "diagnostic_check": "Upload diagnostic data. Please note that this diagnostic data does not\nidentify you, and it will help us to keep Psiphon running smoothly.\n<a class=\"dataCollectionInfoURL\" href=\"#\">Click here to see what data we collect.</a>\n", 
     "top_para_1": "Please let us know how Psiphon is working for you so we can make the system better!\n", 
     "top_content_title": "Give Us Your Feedback", 
@@ -577,7 +577,7 @@ function setLanguage(langName, args)
     else if (name === 'title') {
       document.title = val; //supported in all browsers
     }
-    else if (name === 'text_feedback_top_para' || name === 'text_feedback_bottom_para') {
+    else if (name === 'text_feedback_bottom_para') {
       // Replace the feedback address with a platform specific value.
       val = val.replace(
                   /([a-z0-9]+)@([^\.]+)\.([a-z]+)/g,
