--- a/src/feedback.html
+++ b/src/feedback.html
@@ -295,12 +295,17 @@ var langJSON = {
   }, 
   "tr": {
     "text_feedback_email_prompt": "E\u011fer size geri d\u00f6nmememizi isterseniz, l\u00fctfen e-posta adresinizi girin:\n", 
+    "submit_button": "G\u00f6nder", 
+    "smiley_title": "Toplam memnuniyet", 
     "title": "Psiphon Geribildirimi", 
     "text_feedback_bottom_para": "E\u011fer yukar\u0131daki form \u00e7al\u0131\u015fm\u0131yorsa veya ekran g\u00f6r\u00fcnt\u00fcs\u00fc yollamak isterseniz, l\u00fctfen bize <a id=\"emailAddress\" href=\"mailto:feedback@psiphon.ca\">feedback@psiphon.ca</a> adresinden e-posta g\u00f6nderin.\n", 
-    "submit_button": "G\u00f6nder", 
-    "diagnostic_check": "Kullan\u0131m verisini y\u00fckle. L\u00fctfen bu kullan\u0131m verisinin sizin kimli\u011finizin tan\u0131mlanmas\u0131\ni\u00e7in de\u011fil Psiphon'un ak\u0131c\u0131 \u015fekilde tutulmas\u0131na yard\u0131mc\u0131 olmas\u0131 i\u00e7in kullan\u0131laca\u011f\u0131n\u0131 unutmay\u0131n.\n<a class=\"dataCollectionInfoURL\" href=\"#\">Toplad\u0131\u011f\u0131m\u0131z bilgiler i\u00e7in buraya t\u0131klay\u0131n.</a>\n", 
-    "top_content_title": "Geri Bildirim Yap\u0131n", 
+    "smiley_happy": "Psiphon istedi\u011fim gibi ba\u011flan\u0131yor ve \u00e7al\u0131\u015f\u0131yor.", 
     "top_para_3": "Ayr\u0131ca \u00e7o\u011fu ortak soruna \u00e7\u00f6z\u00fcmleri\n<a class=\"faqURL\" href=\"#\">S\u0131k\u00e7a Sorulan Sorular</a> sayfam\u0131zda bulabilirsiniz.\n", 
+    "text_feedback_prompt": "L\u00fctfen yorumlar\u0131n\u0131z\u0131 buraya girin:\n", 
+    "diagnostic_check": "Kullan\u0131m verisini y\u00fckle. L\u00fctfen bu kullan\u0131m verisinin sizin kimli\u011finizin tan\u0131mlanmas\u0131\ni\u00e7in de\u011fil Psiphon'un ak\u0131c\u0131 \u015fekilde tutulmas\u0131na yard\u0131mc\u0131 olmas\u0131 i\u00e7in kullan\u0131laca\u011f\u0131n\u0131 unutmay\u0131n.\n<a class=\"dataCollectionInfoURL\" href=\"#\">Toplad\u0131\u011f\u0131m\u0131z bilgiler i\u00e7in buraya t\u0131klay\u0131n.</a>\n", 
+    "top_para_1": "L\u00fctfen Psiphon'un nas\u0131l \u00e7al\u0131\u015ft\u0131\u011f\u0131n\u0131 \u00f6\u011frenmemiz i\u00e7in a\u015fa\u011f\u0131daki formu tamamlay\u0131n b\u00f6ylece sistemi daha iyi yapal\u0131m!\n", 
+    "top_content_title": "Geri Bildirim Yap\u0131n", 
+    "smiley_sad": "Psiphon genellikle ba\u011flanam\u0131yor ve yeterince iyi \u00e7al\u0131\u015fm\u0131yor.", 
     "top_para_2": "\u00c7o\u011fu sorun en son s\u00fcr\u00fcm indirilerek \u00e7\u00f6z\u00fclebilir. <a class=\"newVersionURL\" href=\"#\">En son s\u00fcr\u00fcm\u00fc buraya t\u0131klayarak</a>\nveya <span id=\"newVersionEmail\"></span> adresine\ne-posta g\u00f6ndererek indirebilirsiniz.\n"
   }, 
   "fa": {
