--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -12,7 +12,14 @@
   <link rel="stylesheet" href="css/normalize.css?__inline=true">
   <link rel="stylesheet" href="css/main.css?__inline=true">
 
+
+  <script src="vendor/json2.js?__inline=true"></script>
+  <script src="vendor/jquery-1.11.2.min.js?__inline=true"></script>
+  <script src="vendor/modernizr.min.js?__inline=true"></script>
   <script src="vendor/respond.src.js?__inline=true"></script>
+
+  <script src="js/plugins.js?__inline=true"></script>
+  <script src="js/main.js?__inline=true"></script>
 </head>
 
 <body>
@@ -78,11 +85,5 @@
   <ol id="messages">
   </ol>
 </body>
-
-<script src="vendor/json.js?__inline=true"></script>
-<script src="vendor/jquery-1.11.2.min.js?__inline=true"></script>
-
-<script src="js/plugins.js?__inline=true"></script>
-<script src="js/main.js?__inline=true"></script>
 
 </html>
