--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -3935,6 +3935,12 @@ function addLogMessage(obj) {
   row.addClass('priority-' + obj.priority);
   row.append(msgCell);
   $('.log-messages').prepend(row);
+
+  // The "Show Debug Messages" checkbox is hidden until we actually get a debug
+  // message.
+  if (obj.priority < 1) {
+    $('label[for="show-debug-messages"]').removeClass('invisible');
+  }
 }
 
 /* INTERFACE METHODS *********************************************************/
@@ -4432,7 +4438,7 @@ circle.attr("stroke", "#fff");
         <!-- LOG MESSAGES ==================================================-->
         <div class="tab-pane fade" id="messages-pane">
           <div>
-            <label class="checkbox" for="show-debug-messages">
+            <label class="checkbox invisible" for="show-debug-messages">
                 <input type="checkbox" id="show-debug-messages"/>
                 Show debug messages
             </label>
