--- a/src/webui/bs.html
+++ b/src/webui/bs.html
@@ -484,7 +484,7 @@ circle.attr("stroke", "#fff");
         <!-- LOG MESSAGES ==================================================-->
         <div class="tab-pane fade" id="messages-pane">
           <div>
-            <label class="checkbox" for="show-debug-messages">
+            <label class="checkbox invisible" for="show-debug-messages">
                 <input type="checkbox" id="show-debug-messages"/>
                 Show debug messages
             </label>
