--- a/src/webui/bs-inline.html
+++ b/src/webui/bs-inline.html
@@ -3756,8 +3756,15 @@ $(function() {
 
   setupConnectToggle();
 
+  // Update the size of our elements when the window resizes...
   $(window).resize(function() {
-    setTimeout(resizeConnectContent, 1)});
+    setTimeout(resizeConnectContent, 1);
+  });
+  // ...and when the tab is activated...
+  $('a[href="#connection-pane"][data-toggle="tab"]').on('shown', function() {
+    setTimeout(resizeConnectContent, 1);
+  });
+  // ...and now.
   resizeConnectContent();
 });
 
@@ -3823,8 +3830,13 @@ function setupConnectToggle() {
   updateConnectToggle();
 }
 
+// Update the main connect button, as well as the connection indicator on the tab.
 function updateConnectToggle() {
   $('.connect-toggle-content').each(function() {
+    $(this).toggleClass('hidden', $(this).data('connect-state') !== g_lastState);
+  });
+
+  $('a[href="#connection-pane"][data-toggle="tab"] .label').each(function() {
     $(this).toggleClass('hidden', $(this).data('connect-state') !== g_lastState);
   });
 
@@ -3865,6 +3877,9 @@ $(function() {
   // Disable the other upstream proxy settings if skipping
   $('#SkipUpstreamProxy').change(skipUpstreamProxyUpdate);
   skipUpstreamProxyUpdate();
+
+  // The settings are saved (and applied) when the user navigates away from the
+  // Settings tab.
 });
 
 // Returns the numeric port if valid, otherwise false
@@ -4021,6 +4036,18 @@ window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
           <a href="#connection-pane" data-toggle="tab">
             <i class="icon-fixed-width icon-home"></i>
             Connection
+            <span class="label label-warning hidden" data-connect-state="starting">
+              <i class="icon-fixed-width icon-refresh icon-spin"></i>
+            </span>
+            <span class="label label-warning hidden" data-connect-state="stopping">
+              <i class="icon-fixed-width icon-refresh icon-spin"></i>
+            </span>
+            <span class="label label-success hidden" data-connect-state="connected">
+              <i class="icon-fixed-width icon-ok-sign"></i>
+            </span>
+            <span class="label label-important" data-connect-state="stopped">
+              <i class="icon-fixed-width icon-exclamation-sign"></i>
+            </span>
           </a>
         </li>
         <li>
